RESOLVED FIXED53493
DevTools: assertion failure upon devtools window reopen.
https://bugs.webkit.org/show_bug.cgi?id=53493
Summary DevTools: assertion failure upon devtools window reopen.
Pavel Feldman
Reported 2011-02-01 08:02:15 PST
Patch to follow.
Attachments
Patch (1.39 KB, patch)
2012-04-19 05:30 PDT, Vivek Galatage
no flags
Patch (1.37 KB, patch)
2012-04-19 05:37 PDT, Vivek Galatage
no flags
Patch (1.90 KB, patch)
2012-04-19 11:30 PDT, Vivek Galatage
no flags
Vivek Galatage
Comment 1 2012-04-19 05:09:10 PDT
Pavel, if it is ok with you, I have a patch for the bug and I can upload the same for your review.
Vivek Galatage
Comment 2 2012-04-19 05:17:53 PDT
in method WebInspectorClientFrontend::closeWindow() should explicitly call m_page->inspector()->destroyInspectorPage(); in order to reset the pointers.
Vivek Galatage
Comment 3 2012-04-19 05:30:05 PDT
Vivek Galatage
Comment 4 2012-04-19 05:37:05 PDT
Pavel Feldman
Comment 5 2012-04-19 09:10:06 PDT
Comment on attachment 137883 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137883&action=review > Source/WebKit2/WebProcess/WebCoreSupport/WebInspectorFrontendClient.cpp:75 > + m_page->inspector()->destroyInspectorPage(); It sounds like you should inline destroyInspectorPage into didClose in the WebInspector instead.
Vivek Galatage
Comment 6 2012-04-19 11:30:06 PDT
WebKit Review Bot
Comment 7 2012-04-19 12:12:59 PDT
Comment on attachment 137932 [details] Patch Clearing flags on attachment: 137932 Committed r114665: <http://trac.webkit.org/changeset/114665>
WebKit Review Bot
Comment 8 2012-04-19 12:13:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.