DevTools: assertion failure upon devtools window reopen. https://bugs.webkit.org/show_bug.cgi?id=53493

Patch by Vivek Galatage <vivekgalatage@gmail.com> on 2012-04-19
Reviewed by Pavel Feldman.

The pointers pointed to by WebInspector must be reset explicitly
in WebInspector::didClose() method

* WebProcess/WebCoreSupport/WebInspectorClient.cpp:
(WebKit::WebInspectorClient::closeInspectorFrontend):
* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::didClose):

Canonical link: https://commits.webkit.org/101864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114665 268f45cc-cd09-0410-ab3c-d52691b4dbfc